--- a/Front/AutomaticMenuApp/package.json
+++ b/Front/AutomaticMenuApp/package.json
@@ -11,6 +11,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "axios": "^1.4.0",
     "expo": "^47.0.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "8.2.3",
