--- a/Front/AutomaticMenuApp/package.json
+++ b/Front/AutomaticMenuApp/package.json
@@ -16,9 +16,11 @@
     "expo-status-bar": "~1.4.2",
     "firebase": "8.2.3",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
+    "react-native-awesome-alerts": "^2.0.0",
     "react-native-element-dropdown": "^2.8.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
